--- a/8-21/5.plus.html
+++ b/8-21/5.plus.html
@@ -11,7 +11,8 @@
 
 <body>
     <input type="number" id="a"> + <input type="number" id="b">
-    <button onclick="doAjax()">=</button> <span id="result"></span>
+    <button onclick="doAjax()">=</button>
+    <span id="result"></span>
 
     <script>
         const a = document.querySelector('#a');
